envoy/envoy.yaml
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address:
      protocol: TCP
      address: 0.0.0.0
      port_value: 9901
static_resources:
  listeners:
  - name: listener_0
    address:
      socket_address:
        protocol: TCP
        address: 0.0.0.0
        port_value: 10000
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        config:
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains: ["*"]
              routes:
              - match:
                  prefix: "/SAML2/"
                route:
                  cluster: service_saml
              - match:
                  prefix: "/"
                route:
                  cluster: service_flask
          http_filters:
          - name: envoy.lua
            config:
              inline_code: |
                local saml = require("saml")
                function envoy_on_request(request_handle)
                    local handler = saml.SamlHandler.new({
                        saml_cluster = "service_saml", 
                        secret_key = "secret", 
                        token = "811f85a4-6b92-4c4e-98f1-7d086f2d4952",
                        user_header = "x-auth-user",
                        token_header = "x-auth-token"
                        })
                    handler:on_request(request_handle)
                end
                function envoy_on_response(response_handle)
                end
          - name: envoy.router
  clusters:
  - name: service_flask
    connect_timeout: 0.25s
    type: LOGICAL_DNS
    dns_lookup_family: V4_ONLY
    lb_policy: ROUND_ROBIN
    hosts:
      - socket_address:
          address: website
          port_value: 8000
  - name: service_saml
    connect_timeout: 0.25s
    type: LOGICAL_DNS
    dns_lookup_family: V4_ONLY
    lb_policy: ROUND_ROBIN
    hosts:
      - socket_address:
          address: saml-backend
          port_value: 8000
